<resources>
    <string name="app_name">blibala</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="send">发送</string>
    <string name="permission_not_authorized">权限未授权</string>
    <string name="in_translation">翻译中</string>
    <string name="copy">复制</string>
    <string name="collect">收藏</string>
    <string name="hide_translation">隐藏翻译</string>
    <string name="translated">已翻译</string>
    <string name="edit_information">编辑资料</string>
    <string name="Complete_information">完善信息</string>
    <string name="nick_name">昵称</string>
    <string name="sex">性别</string>
    <string name="birthday">生日</string>
    <string name="invitation_code">邀请码</string>
    <string name="self_introduction">自我介绍</string>
    <string name="basic_information">基本信息</string>
    <string name="save">保存</string>
    <string name="constellation">星座</string>
    <string name="please_choose">请选择</string>
    <string name="body_height">身高</string>
    <string name="profession">职业</string>
    <string name="dating_purpose">交友目的</string>
    <string name="release">发布</string>
    <string name="life_record">生活记录</string>
    <string name="record_life">记录生活</string>
    <string name="setting">设置</string>
    <string name="privacy_policy">隐私政策</string>
    <string name="user_agreement">用户协议</string>
    <string name="about_us">关于我们</string>
    <string name="personal_information">个人资料</string>
</resources>