<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="event"
            type="com.dkcr.blibala.ui.mine.ac.EditInformationActivity.Event" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.mine.ac.EditInformationActivity">

        <com.hjq.bar.TitleBar
            android:id="@+id/title_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:rightTitle="@string/save"
            app:title="@string/edit_information" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_user_cover"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_150"
            android:background="@color/color_222230"
            app:layout_constraintTop_toBottomOf="@id/title_bar" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_avatar"
            android:layout_width="@dimen/dp_60"
            android:layout_height="@dimen/dp_60"
            android:layout_marginStart="@dimen/dp_20"
            android:background="@color/color_697A9F"
            app:layout_constraintBottom_toBottomOf="@id/img_user_cover"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_user_cover" />

        <TextView
            android:id="@+id/tv_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_15"
            android:text="小可爱"
            android:textSize="@dimen/sp_12"
            app:layout_constraintStart_toEndOf="@id/img_avatar"
            app:layout_constraintTop_toBottomOf="@id/img_user_cover" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_20"
            android:background="@color/white"
            android:paddingVertical="@dimen/dp_10"
            app:layout_constraintTop_toBottomOf="@id/img_avatar"
            android:onClick="@{()->event.onInfo()}">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:drawableStart="@mipmap/ic_add"
                android:drawablePadding="@dimen/dp_10"
                android:gravity="center"
                android:text="@string/basic_information"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:layout_width="@dimen/dp_20"
                android:layout_height="@dimen/dp_20"
                android:background="@mipmap/ic_gray_right"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_self_introduct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_1"
            android:background="@color/white"
            android:paddingVertical="@dimen/dp_10"
            app:layout_constraintTop_toBottomOf="@id/cl_info"
            android:onClick="@{()->event.onIntroduct()}">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:drawableStart="@mipmap/ic_add"
                android:drawablePadding="@dimen/dp_10"
                android:gravity="center"
                android:text="@string/self_introduction"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:layout_width="@dimen/dp_20"
                android:layout_height="@dimen/dp_20"
                android:background="@mipmap/ic_gray_right"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>