<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="event"
            type="com.dkcr.blibala.ui.account.PerfectInfoActivity.Event" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.account.PerfectInfoActivity">

        <com.hjq.bar.TitleBar
            android:id="@+id/title_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@string/Complete_information" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_avatar"
            android:layout_width="@dimen/dp_80"
            android:layout_height="@dimen/dp_80"
            android:layout_marginTop="@dimen/dp_30"
            android:background="@mipmap/ic_launcher_round"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_bar"
            android:onClick="@{()->event.onAvatar()}"/>

        <LinearLayout
            android:id="@+id/ll_nick_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/img_avatar"
            android:layout_marginTop="@dimen/dp_20"
            android:paddingHorizontal="@dimen/dp_30">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nick_name"/>
                <View
                    android:layout_width="@dimen/dp_1"
                    android:layout_height="@dimen/dp_15"
                    android:background="@color/black"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="@dimen/dp_10"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="设置后每个月可修改一次"
                    android:textSize="@dimen/sp_12"/>

            </LinearLayout>
            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_35"
                app:strokeColor="@color/black"
                app:strokeWidth="@dimen/dp_1"
                app:cardCornerRadius="@dimen/dp_25"
                android:layout_marginTop="@dimen/dp_8">
                <androidx.appcompat.widget.AppCompatEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:drawableEnd="@mipmap/ic_keyboard"
                    android:paddingEnd="@dimen/dp_20"
                    android:id="@+id/et_nick_name"
                    android:textSize="@dimen/sp_14"
                    android:layout_marginHorizontal="@dimen/dp_20"/>
            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_sex"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/ll_nick_name"
            android:layout_marginTop="@dimen/dp_20"
            android:paddingHorizontal="@dimen/dp_30">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sex"/>
                <View
                    android:layout_width="@dimen/dp_1"
                    android:layout_height="@dimen/dp_15"
                    android:background="@color/black"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="@dimen/dp_10"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="设置后不可修改"
                    android:textSize="@dimen/sp_12"/>

            </LinearLayout>
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_35"
                    app:strokeColor="@color/black"
                    app:strokeWidth="@dimen/dp_1"
                    app:cardCornerRadius="@dimen/dp_25"
                    android:layout_marginTop="@dimen/dp_8"
                    android:layout_weight="1"
                    android:layout_marginEnd="@dimen/dp_15">
                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="男"
                        android:drawableLeft="@drawable/main_mine_off"
                        android:layout_gravity="center"/>
                </com.google.android.material.card.MaterialCardView>
                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_35"
                    app:strokeColor="@color/black"
                    app:strokeWidth="@dimen/dp_1"
                    app:cardCornerRadius="@dimen/dp_25"
                    android:layout_marginTop="@dimen/dp_8"
                    android:layout_weight="1"
                    android:layout_marginLeft="@dimen/dp_15">
                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="女"
                        android:drawableLeft="@drawable/main_mine_on"
                        android:layout_gravity="center"/>
                </com.google.android.material.card.MaterialCardView>
            </androidx.appcompat.widget.LinearLayoutCompat>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_birthday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/ll_sex"
            android:layout_marginTop="@dimen/dp_20"
            android:paddingHorizontal="@dimen/dp_30">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/birthday"/>
                <View
                    android:layout_width="@dimen/dp_1"
                    android:layout_height="@dimen/dp_15"
                    android:background="@color/black"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="@dimen/dp_10"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="设置后每个月可修改一次"
                    android:textSize="@dimen/sp_12"/>

            </LinearLayout>
            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_35"
                app:strokeColor="@color/black"
                app:strokeWidth="@dimen/dp_1"
                app:cardCornerRadius="@dimen/dp_25"
                android:layout_marginTop="@dimen/dp_8">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:drawableEnd="@mipmap/ic_keyboard"
                    android:paddingEnd="@dimen/dp_20"
                    android:id="@+id/tv_birthday"
                    android:textSize="@dimen/sp_14"
                    android:layout_marginHorizontal="@dimen/dp_20"/>
            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_invitation_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/ll_birthday"
            android:layout_marginTop="@dimen/dp_20"
            android:paddingHorizontal="@dimen/dp_30">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/invitation_code"/>
                <View
                    android:layout_width="@dimen/dp_1"
                    android:layout_height="@dimen/dp_15"
                    android:background="@color/black"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="@dimen/dp_10"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="选填"
                    android:textSize="@dimen/sp_12"/>

            </LinearLayout>
            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_35"
                app:strokeColor="@color/black"
                app:strokeWidth="@dimen/dp_1"
                app:cardCornerRadius="@dimen/dp_25"
                android:layout_marginTop="@dimen/dp_8">
                <androidx.appcompat.widget.AppCompatEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:drawableEnd="@mipmap/ic_keyboard"
                    android:paddingEnd="@dimen/dp_20"
                    android:id="@+id/et_code"
                    android:textSize="@dimen/sp_14"
                    android:layout_marginHorizontal="@dimen/dp_20"/>
            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:theme="@style/Theme.MaterialComponents.Light.NoActionBar"
            app:layout_constraintTop_toBottomOf="@id/ll_invitation_code"
            app:cornerRadius="@dimen/dp_25"
            android:layout_marginHorizontal="@dimen/dp_60"
            android:layout_marginTop="@dimen/dp_50"
            android:backgroundTint="@color/white"
            app:strokeColor="@color/black"
            app:strokeWidth="@dimen/dp_1"
            android:insetTop="0dp"
            android:insetBottom="@dimen/dp_0"
            android:text="开始畅聊"
            android:textColor="@color/black"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>