<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="event"
            type="com.dkcr.blibala.ui.makefriends.ac.FriendDetailsActivity.Event" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.mine.ac.EditInformationActivity">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_user_cover"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_200"
            android:background="@color/color_222230"
            android:scaleType="fitXY"
            android:src="@drawable/avatar_icon"
            app:layout_constraintTop_toTopOf="parent"/>
        <com.hjq.bar.TitleBar
            android:id="@+id/title_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:rightIcon="@mipmap/ic_emoji"/>
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_avatar"
            android:layout_width="@dimen/dp_60"
            android:layout_height="@dimen/dp_60"
            android:layout_marginStart="@dimen/dp_20"
            android:background="@color/color_697A9F"
            app:layout_constraintBottom_toBottomOf="@id/img_user_cover"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_user_cover" />

        <TextView
            android:id="@+id/tv_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_15"
            android:text="小可爱"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_12"
            app:layout_constraintBottom_toBottomOf="@id/img_user_cover"
            app:layout_constraintStart_toEndOf="@id/img_avatar" />

        <TextView
            android:id="@+id/tv_position"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="120km"
            app:layout_constraintBottom_toBottomOf="@id/img_avatar"
            app:layout_constraintStart_toStartOf="@id/tv_user_name"
            app:layout_constraintTop_toBottomOf="@id/img_user_cover" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_10"
            android:text="21岁"
            app:layout_constraintBottom_toBottomOf="@id/img_avatar"
            app:layout_constraintStart_toEndOf="@id/tv_position"
            app:layout_constraintTop_toBottomOf="@id/img_user_cover"/>
        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/img_avatar"
            android:layout_marginTop="@dimen/dp_20">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/tv_feeling"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_50"
                    android:layout_marginHorizontal="@dimen/dp_40"
                    android:background="#90FB9FC8"
                    android:gravity="center_vertical"
                    android:text="想做你的小仙女"
                     app:layout_constraintTop_toTopOf="parent"/>

                <TextView
                    android:id="@+id/txt_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_10"
                    android:text="@string/personal_information"
                    android:textColor="@color/black"
                    app:layout_constraintStart_toStartOf="@id/tv_feeling"
                    app:layout_constraintTop_toBottomOf="@id/tv_feeling" />
                <LinearLayout
                    android:id="@+id/ll_height"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintTop_toBottomOf="@id/txt_info"
                    app:layout_constraintStart_toStartOf="@id/txt_info"
                    android:paddingVertical="@dimen/dp_10">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/body_height"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dp_20"
                        android:text="168 CM"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/ll_profession"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintTop_toBottomOf="@id/ll_height"
                    app:layout_constraintStart_toStartOf="@id/txt_info"
                    android:paddingVertical="@dimen/dp_10">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/profession"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dp_20"
                        android:text="设计师"/>
                </LinearLayout>

                <TextView
                    android:id="@+id/txt_dynamic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_10"
                    android:text="动态"
                    android:textColor="@color/black"
                    app:layout_constraintStart_toStartOf="@id/txt_info"
                    app:layout_constraintTop_toBottomOf="@id/ll_profession" />

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/txt_dynamic"
                    android:id="@+id/recyclerView"
                    android:nestedScrollingEnabled="false"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>